plugins {
    id "java"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

tasks.named('processResources') {
    filesMatching('plugin.json') {
        expand(
                pluginVersion: pluginVersion
        )
    }
}

tasks.jar {
    archiveFileName.set("shaders-utils-${pluginVersion}.zip")
}

tasks.register('runMCreatorWithPlugin', JavaExec) {
    dependsOn(processResources, jar)

    environment("MCREATOR_PLUGINS_FOLDER", file("./build/libs"))

    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'

    classpath = project(':MCreator').sourceSets.main.runtimeClasspath

    mainClass = 'net.mcreator.Launcher'

    workingDir = mcreator_path
}

subprojects { subproject ->
    subproject.plugins.withType(JavaPlugin).tap {
        configureEach {
            test {
                useJUnitPlatform()
                include '**/GeneratorsTest.class'

                dependsOn rootProject.processResources
                dependsOn rootProject.jar

                environment("MCREATOR_PLUGINS_FOLDER", new File(rootProject.projectDir, "/build/libs"))
                environment("MCREATOR_TEST_GENERATORS", "neoforge-1.21.1, neoforge-1.21.8")

                workingDir = mcreator_path
            }
        }
    }
}